# dotfiles

./: .bash_profile  .bashrc  .editorconfig  .gitconfig  .gitignore  .gitmodules  .inputrc  .markdownlint-cli2.yaml  .prettierrc.yml  .tmux.conf  .vimrc  AGENTS.md  CLAUDE.md  README.md  conftest.py  hyperstart.bat  lefthook.yml  mise.toml  pyproject.toml  renovate.json  setup-wsl_debian.sh  setup.sh  setup_aarch64.sh  setup_codespaces.sh  setup_colima.sh  setup_crostini.sh  setup_gce.sh  setup_mac.sh  setup_proot_arm64.sh  setup_termux.sh  setup_ubuntu.sh  setup_wsl.sh  setup_wsl_ubuntu.sh  test_util.py  update_aarch64.sh
.brewfile/: Brewfile  updateBrewScript.sh
.claude/: settings.json
.config/: rc-settings.sh
.devcontainer/: devcontainer.json  post-install.sh
.github/: copilot-instructions-old.md  copilot-instructions.md
atom/: config.cson  keymap.cson  packages.txt
bashfiles/: bash_profile  bashrc
brewfile/: Brewfile
chocolatey/: chocolatey.config  packages.config
docs/: planning.md
lib/: setup-common.sh
scripts/: bat.sh  bitwarden.sh  chromium.ps1  cloudcompare.ps1  cmder.ps1  docker-ubuntu.sh  docui.sh  drawio-desktop.ps1  exa.sh  fd.sh  fiji.ps1  fzf.sh  gcloud.sh  geek-uninstaller.ps1  ghq.sh  git-svn.sh  git.sh  gotop.sh  gpg.sh  hugo.sh  hyper.ps1  jasper.ps1  jq.sh  lazygit.sh  lepton.ps1  mattermost-client.ps1  myrica.sh  myricam.sh  neovim-ubuntu.sh  nvidia_docker2.sh  nvidia_driver.sh  nvim.sh  peco.sh  procs.sh  pt.sh  python.sh  ricty.sh  ripgrep.sh  rlogin.ps1  slack.ps1  (+6 more)
tests/: setup_common.bats  test_append_review.py  (+4 more)
(+862 files in other folders)
